# gtest_example

./: CMakeLists.txt  Factorial.h  Factorial_Test.cpp  README.md  makefile  tMain.cpp
gmock_c_example/: TestCwithMock.cpp  c_codeToBeTestedMock.h  c_codeTobeTested.c  c_codeTobeTested.h  fake_cFunctions.h  makefile
src/: CodeCoverage.cpp  CodeCoverage.h  Factorial.cpp  Factorial.h  main_factorial.cpp
test/: CMakeLists.txt
test/src/: CodeCoverageTest.cpp
